--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         { icon: 'MapPin', value: "QUEZON CITY, PHILIPPINES", label: "LOCATION" },
       ],
       education: [
-        { institution: "OUR LADY OR LOURDES SCHOOL OF NOVALICHES", degree: "ICT", years: "2022 - 2024", grade: "WITH HONORS" },
-        { institution: "NEW ERA UNIVERSITY", degree: "B.S. INFORMATION TECHNOLOGY", years: "2024 - 2028", grade: "EXPECTED GRAD." },
+        { institution: "OUR LADY OR LOURDES SCHOOL OF NOVALICHES", degree: "ICT", years: "2022 - 2024",},
+        { institution: "NEW ERA UNIVERSITY", degree: "B.S. INFORMATION TECHNOLOGY", years: "2024 - 2028",},
       ],
       skills: {
         languages: ["JAVASCRIPT", "HTML", "SQL"],
@@ -265,4 +265,5 @@
 
     window.onload = renderDashboard;
   </script>
+
 </body>
